testsuite/tests/interpreter_errors/invalid_list_index/test.out
main.adb

Error: Invalid index:  999999

print (p[999999])
       ^^^^^^^^^^

